--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -11,13 +11,13 @@
   <script src="lib/jasmine-3.3.0/jasmine-html.js"></script>
   <script src="lib/jasmine-3.3.0/boot.js"></script>
 
-  <!-- include source files here... -->
-  <script src="src/Player.js"></script>
-  <script src="src/Song.js"></script>
+  <!-- include source files here........ -->
+
+  <script src="src/spaces.js"></script>
 
   <!-- include spec files here... -->
-  <script src="spec/SpecHelper.js"></script>
-  <script src="spec/PlayerSpec.js"></script>
+
+  <script src="spec/spaces_spec.js"></script>
 
 </head>
 
