--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -12,8 +12,8 @@
   <script src="lib/jasmine-3.3.0/boot.js"></script>
 
   <!-- include src files here... -->
-  <script src="src/User.js"></script>
-  <script src="src/spaces.js"></script>
+  <script src="/public/js/User.js"></script>
+  <script src="/public/js/spaces.js"></script>
 
   <!-- include spec files here... -->
   <script src="spec/SpecHelper.js"></script>
