--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -11,9 +11,13 @@
   <script src="lib/jasmine-3.3.0/jasmine-html.js"></script>
   <script src="lib/jasmine-3.3.0/boot.js"></script>
 
+  <!-- jasmine jquery files for testing... -->
+  <script type="text/javascript" src="lib/jquery-3.3.1.js"></script>
+  <script type="text/javascript" src="lib/jasmine-jquery.js"></script>
+
   <!-- include src files here... -->
-  <script src="/public/js/User.js"></script>
-  <script src="/public/js/spaces.js"></script>
+  <script src="public/js/User.js"></script>
+  <script src="public/js/spaces.js"></script>
 
   <!-- include spec files here... -->
   <script src="spec/SpecHelper.js"></script>
