Updated the file path in the SpecHelper.html

--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -16,8 +16,8 @@
   <script type="text/javascript" src="lib/jasmine-jquery.js"></script>
 
   <!-- include src files here... -->
-  <script src="public/js/User.js"></script>
-  <script src="public/js/spaces.js"></script>
+  <script src="js/User.js"></script>
+  <script src="js/spaces.js"></script>
 
   <!-- include spec files here... -->
   <script src="spec/SpecHelper.js"></script>
