--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <h3>Please select this button if you do not have an account</h3> <!-- DB/ZH added -->
       <button id="header-sign-up">Sign Up</button> <!-- DB/ZH changed to id -->
       <h1>Log in to Makers BnB</h1> <!-- DB/ZH removed form -->
-          <input id="sign_email" type="email" name="email" placeholder="Email"/><br><br>
+          <input id="sign_email" type="email" name="email" placeholder="Email"><br><br>
           <input id="sign_password" type="password" name="password" placeholder="Password"/><br><br>
           <button id="signin_submit">Log In</button>
     </div>
@@ -23,7 +23,7 @@
     <h3>Please select this button if you have an account</h3> <!-- DB/ZH added -->
     <button id="header-log-in">Log In</button> <!-- DB/ZH changed to id -->
     <h1>Sign up to Makers BnB</h1>
-      <input id="reg_email" type="email" name="email" placeholder="Email"/><br><br>
+      <input id="reg_email" type="email" name="email" placeholder="Email"><br><br>
       <input id="reg_password" type="password" name="password" placeholder="Password"/><br><br>
       <input id="reg_password2" type="password" name="password confirmation" placeholder="Password Confirmation"/><br><br>
       <button id="signUp_submit">Sign Up</button> <!-- DB/ZH changed to "Sign Up" -->
