get listing api started - need to sort out printing to screen

--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -18,11 +18,13 @@
   <!-- include src files here... -->
   <script src="js/User.js"></script>
   <script src="js/spaces.js"></script>
+  <script src="js/bnb.js"></script>
 
   <!-- include spec files here... -->
   <script src="spec/SpecHelper.js"></script>
   <script src="spec/userSpec.js"></script>
   <script src="spec/spaces_spec.js"></script>
+  <script src="spec/bnb_spec.js"></script>
 
 
 </head>
