bnb class and some changes to interface for page title and getting the spaces into an array

--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html>
   <head>
     <!-- Sundar changed the title below from Sign in Page to Sign Up Page -->
-    <title>Sign Up Page | Murphy BnB</title>
+    <title>Murphy BnB</title>
     <script src="lib/jquery-3.3.1.js"> </script>
     <script src="js/interface.js"> </script>
     <script src="js/User.js"> </script>
     <script src="js/spaces.js"> </script>
+    <script src="js/bnb.js"> </script>
    </head>
 
   <body>
