interface update for listing spaces through array in jquery

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="js/User.js"> </script>
     <script src="js/spaces.js"> </script>
     <script src="js/bnb.js"> </script>
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet">
    </head>
 
   <body>
@@ -55,6 +56,8 @@
           <label for="avail_from">Available from</label><input type="text" id="avail_from" name="avail_from" placeholder="DD/MM/YYYY" />
           <label for="avail_to">Available to</label><input type="text" id="avail_to" name="avail_to" placeholder="DD/MM/YYYY" />
           <button id="book_list_spaces_btn" type="button">List spaces</button>
+          <div class="row" id="accommodation">
+          </div>
     </div>
     <!-- DB/ZH 6/11 - added user form above -->
   </body>
