--- a/index.html
+++ b/index.html
@@ -9,6 +9,37 @@
     <script src="js/spaces.js"> </script>
     <script src="js/bnb.js"> </script>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+      .item img {
+        width: 100%;
+        cursor:pointer;
+      }
+
+      .item p {
+        margin:0;
+      }
+
+     .location {
+        text-transform: uppercase;
+        font-size: 12px;
+        font-weight: bold;
+        color:brown;
+      }
+
+      .title {
+        font-size: 16px;
+        font-weight: bold;
+      }
+
+      .price {
+        font-size:14px;
+        font-weight: 400;
+      }
+
+      .selected {
+        outline: 1px solid red;
+      }
+    </style>
    </head>
 
   <body>
