checks valid email at sign in

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <h3>Please select this button if you do not have an account</h3> <!-- DB/ZH added -->
       <button id="header-sign-up">Sign Up</button> <!-- DB/ZH changed to id -->
       <h1>Log in to Makers BnB</h1> <!-- DB/ZH removed form -->
-          <input id="sign_email" type="email" name="email" placeholder="Email"><br><br>
+          <input id="sign_email" type="email" name="email" placeholder="Email" required autofocus/><br><br>
           <input id="sign_password" type="password" name="password" placeholder="Password"/><br><br>
           <button id="signin_submit">Log In</button>
     </div>
