updated listing html/css

--- a/index.html
+++ b/index.html
@@ -8,37 +8,35 @@
     <script src="js/User.js"> </script>
     <script src="js/spaces.js"> </script>
     <script src="js/bnb.js"> </script>
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet">
     <style>
-      .item img {
-        width: 100%;
-        cursor:pointer;
-      }
+    div.listings {
+      margin: 5px;
+      border: 1px solid #ccc;
+      float: left;
+      width: 180px;
+    }
 
-      .item p {
-        margin:0;
-      }
+    div.location {
+      padding: 15px;
+      text-align: center;
+    }
 
-     .location {
-        text-transform: uppercase;
-        font-size: 12px;
-        font-weight: bold;
-        color:brown;
-      }
+    div.title {
+      padding: 15px;
+      text-align: center;
+    }
 
-      .title {
-        font-size: 16px;
-        font-weight: bold;
-      }
+    div.price {
+      padding: 15px;
+      text-align: center;
+    }
 
-      .price {
-        font-size:14px;
-        font-weight: 400;
-      }
+    div.listings img {
+      width: 100%;
+      height: auto;
+      
+    }
 
-      .selected {
-        outline: 1px solid red;
-      }
     </style>
    </head>
 
