added css to user-reg section of index.html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="js/User.js"> </script>
     <script src="js/spaces.js"> </script>
     <script src="js/bnb.js"> </script>
+    <link rel="stylesheet" type="text/css" href="js/style.css">
     <style>
     div.listings {
       margin: 5px;
@@ -34,7 +35,7 @@
     div.listings img {
       width: 100%;
       height: auto;
-      
+
     }
 
     </style>
